# inmoov

./: .gitignore  LICENSE  README.md
cad/InMoovSW/: LeftIndexfinger1.SLDPRT  LeftIndexfinger2.SLDPRT  LeftIndexfinger3.SLDPRT  LeftMiddlefinger1.SLDPRT  LeftMiddlefinger2.SLDPRT  LeftMiddlefinger3.SLDPRT  LeftPinkie1.SLDPRT  LeftPinkie2.SLDPRT  LeftPinkie3.SLDPRT  LeftRingfinger1.SLDPRT  LeftRingfinger2.SLDPRT  LeftRingfinger3.SLDPRT  LeftShoulder.SLDPRT  LeftThumb1.SLDPRT  LeftThumb2.SLDPRT  LeftThumb3.SLDPRT  LeftUpperShoulder.SLDPRT  LeftWrist.SLDPRT  NeckHolder.SLDPRT  RightIndexfinger1.SLDPRT  RightIndexfinger2.SLDPRT  RightIndexfinger3.SLDPRT  RightMiddlefinger1.SLDPRT  RightMiddlefinger2.SLDPRT  RightMiddlefinger3.SLDPRT  RightPinkie1.SLDPRT  RightPinkie2.SLDPRT  RightThumb1.SLDPRT  (+9 more)
firmware/: JointAngles.h  inmoov_relay.ino
inmoov_ros/: package.xml
ros/inmoov_ws/src/inmoov_urdf/: CMakeLists.txt
ros/inmoov_ws/src/inmoov_urdf/config/: joint_names_in-moov-ros.yaml
ros/inmoov_ws/src/inmoov_urdf/launch/: rosserial.launch
ros/inmoov_ws/src/inmoov_urdf/meshes/: body.STL  l_bicep.STL  l_forearm.STL  l_hand.STL  l_index2.STL  l_index3.STL  l_lshoulder.STL  l_pinkie3.STL  l_ring1.STL  l_ring2.STL  l_thumb2.STL  l_wrist.STL  neck.STL  r_bicep.STL  r_hand.STL  r_index1.STL  r_lshoulder.STL  r_middle2.STL  r_pinkie1.STL  r_pinkie3.STL  r_ring1.STL  r_ring2.STL  r_ring3.STL  r_thumb1.STL  r_ushoulder.STL
ros/inmoov_ws/src/inmoov_urdf/scripts/: joint_angle_publisher.py  joint_angles_node.py  test_node.py
ros/inmoov_ws/src/inmoov_urdf/urdf/: inmoov.urdf  inmoov_.urdf
(+27 files in other folders)
